--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,50 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+ion-card {
+    margin: 0;
+}
+
+.input {
+    padding: 10px 0;
+    ion-label {
+        --padding-top: 10px;
+        --padding-bottom: 10px;
+    }
+    ion-item {
+        --background: var(--ion-color-light, var(--ion-color-light, var(--ion-background-color, #fff)));
+        --border-radius: 8px;
+    }
+}
+ion-list {
+    margin: 0 !important;
+    background: var(--ion-card-background, var(--ion-item-background, var(--ion-background-color, #fff))) !important;
+}
+ion-item {
+    --background: var(--ion-card-background, var(--ion-item-background, var(--ion-background-color, #fff)));
+}
+.card-list {
+    padding: 0;
+    ion-item {
+        --padding-start: 0;
+    }
+}
+.record-set-modal {
+    --height: auto;
+}
+
+app-record-set {
+    height: 650px !important;
+}
+.empty {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(100% - 200px);
+}
+.small-empty{
+    height: calc(100% - 500px);
+
+}
